2016-11-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amstatus.pl: Fix warning, do not print useless (:)
	* installcheck/failure-*.pl, installcheck/success-dumper-*.pl: fix

2016-11-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Add tapedev in storage section
	* common-src/conffile.h: Add STORAGE_TAPEDEV
	* device-src/xfer-dest-taper-splitter.c: Fix to use mem_ring value
	* man/xml-source/amanda.conf.5.xml: Document tapedev in storage section
	* perl/Amanda/Changer.pm: Improve message 1150003
	* perl/Amanda/Config.swg: Add STORAGE_TAPEDEV
	* perl/Amanda/Rest/Storages.pm: Set status to 404 if create fail
	* perl/Amanda/Storage.pm: Use tapedev if tpchanger is not set
	* installcheck/Amanda_Rest_Storages.pl: Fix check
	* installcheck/taper.pl: Fix check

2016-11-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/planner.c: Set dp->todo to 0 if the dle is not skipped

2016-11-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/amtapetype.pl: Correctly check result of property_set

2016-11-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/components.m4 (AMANDA_WITHOUT_REST_SERVER): New
	  --without-rest-server option
	* Makefile.am: Do not build rest-server if --without-rest-server
	* config/amanda/libs.m4: Fix typo
	* man/Makefile.am: Do not build amanda-rest-server.8 if
	  --without-rest-server
	* perl/Makefile.am: Do not build Amanda::Rest modules if
	  --without-rest-server
	* server-src/Makefile.am: Do not build amanda-rest-server if
	  --without-rest-server

2016-11-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Correctly handle Region not found
	* device-src/s3.h: Add S3_ERROR_Region_Not_Found

2016-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Verify a publicURL is found

2016-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: publicURl and region can be unordered
